Fix overflow for data content

--- a/infrastructure/ui/tm1/client/src/app/app.component.css
+++ b/infrastructure/ui/tm1/client/src/app/app.component.css
@@ -4,7 +4,7 @@
 }
 
 .learningMachinesHeader {
-  max-height: 20vh;
+  max-height: 15vh;
 }
 
 .learningMachinesStepper {
@@ -14,5 +14,6 @@
 }
 
 .learningMachinesData {
-  max-height: 60vh;
+  max-height: 65vh;
+  overflow-y: scroll;
 }
